--- a/styles/lilyformalist.less
+++ b/styles/lilyformalist.less
@@ -4,5 +4,18 @@
 // for a full listing of what's available.
 @import "ui-variables";
 
-.lilyformalist {
+.your-name-word-count {
+    body {
+      background-color: lightblue;
+  }
+
+  h1 {
+      color: rgb(173, 92, 57);
+      margin-right: 100px;
+  }
+
+  h3 {
+      color: rgb(128, 66, 40);
+      margin-right: 100px;
+  }
 }
