added draggable css and made div tags legible

--- a/styles/lilyformalist.less
+++ b/styles/lilyformalist.less
@@ -11,12 +11,22 @@
 
   h1 {
       color: rgb(173, 92, 57);
+      margin-top: 50px;
       margin-right: 100px;
   }
 
   h3 {
       color: rgb(128, 66, 40);
       margin-right: 100px;
+  }
+
+  span{
+      color: rgb(128, 66, 40);
+      margin-leftt: 300px;
+  }
+
+  button{
+    margin-left: 50px;
   }
 }
 
