--- a/styles/lilyformalist.less
+++ b/styles/lilyformalist.less
@@ -18,4 +18,17 @@
       color: rgb(128, 66, 40);
       margin-right: 100px;
   }
+
+  #drag-1, #drag-2 {
+      width: 10%;
+      height: 20%;
+      min-height: 6.5em;
+      margin: 10%;
+      background-color: #29e;
+      color: white;
+      border-radius: .75em;
+      padding: 4%;
+      -webkit-transform: translate(10px, 0px);
+      transform: translate(0px, 0px);
+  }
 }
