cleaned up css, restored tmpwrite

--- a/styles/lilyformalist.less
+++ b/styles/lilyformalist.less
@@ -5,6 +5,12 @@
 @import "ui-variables";
 
 .your-name-word-count {
+
+  div {
+    margin-top: 50px;
+    margin-left: 20px;
+  }
+
     body {
       background-color: lightblue;
   }
