added language option

--- a/styles/lilyformalist.less
+++ b/styles/lilyformalist.less
@@ -11,9 +11,13 @@
     margin-left: 20px;
   }
 
-    body {
+  body {
       background-color: lightblue;
   }
+
+  input {
+      margin-left: 2px
+    }
 
   h1 {
       color: rgb(173, 92, 57);
