--- a/styles/lilyformalist.less
+++ b/styles/lilyformalist.less
@@ -4,7 +4,7 @@
 // for a full listing of what's available.
 @import "ui-variables";
 
-.your-name-word-count {
+.lilyformalist {
 
   div {
     margin-top: 20px;
